# Escape

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  run.sh
assets/: map.json  white.material
assets/shaders/: color.fs  point.vs
client/cocos2dx/: .gitignore  CMakeLists.txt
client/cocos2dx/Classes/: AppDelegate.cpp  AppDelegate.h  GameScene.cpp  GameScene.h  HelloWorldScene.cpp  Settings.cpp  Settings.h
client/cocos2dx/proj.linux/: main.cpp
client/ogre/: CMakeLists.txt  display.cpp
client/ogre/src/: display.cpp  display.h  main.cpp  window.h  window_ogre.cpp  window_ogre.h
core/: AI.cpp  AI.h  MyECS.h  agent.cpp  agent.h  ai_system.cpp  ai_system.h  bullet_system.cpp  bullet_system.h  components.h  config.h  control.h  event_system.cpp  event_system.h  lifespan.cpp  lifespan.h  logic.cpp  logic.h  lua_ai.cpp  lua_ai.h  lua_script.cpp  lua_script.h  lua_script_util.cpp  lua_script_util.h  map_converter.cpp  map_converter.h  map_info.cpp  map_info.h  map_script_system.cpp  map_script_system.h  map_server.h  message.h  my_escape.h  psysics.cpp  psysics.h  restful_system.h  serialization.cpp  serialization.h  terrain.h  timeserver.cpp  (+5 more)
core/engine/: system.h  utils.h  window.cpp  window.h
deprecated/engine/: renderer2d.h
editor/: main.cpp  map_converter.cpp  map_converter.h
maps/: core.json  map1.json
maps/duel/: game.lua  mapdata.json  player_ai.lua  simple_ai.lua  utils.lua
maps/map1/: configuration.json  game.lua  mapdata.json  shooter.lua  simple_ai.lua
shaders/: point_and_color.vs
src/: AI.cpp  ECScore.h  MyECS.cpp  MyECS.h  agent.cpp  agent.h  application.h  client.cpp  components.h  control.h  core.h  display.cpp  display.h  display_glfw.imp  index_buffer.h  layer.h  lifespan.cpp  lifespan.h  logic.cpp  logic.h  main.cpp  message.h  movement.cpp  movement.h  psysics.cpp  read_map.cpp  read_map.h  renderer2d.h  scene.h  separate_application.cpp  separate_application.h  serialization.cpp  serialization.h  shader.cpp  shader.h  sprite2d.h  system.h  terrain.h  timeserver.cpp  timeserver.h  (+9 more)
src/engine/: MyECS.h  application.h  scene.h  separate_application.h  shader.h  timeserver.h  utils.h  vertex_buffer.h  window.h  window_glfw.cpp  window_glfw.h  window_ogre.cpp  window_ogre.h
